--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,9 +1,7 @@
-<h1>로그인 페이지</h1>>
+<h1>로그인페이지</h1>
 
-<form method="POST" action=""> 
-
+<form method="POST" action="">
 {% csrf_token %}
 {{form}}
 <input type="submit" value="로그인">
-
 </form>
