--- a/main/templates/detail.html
+++ b/main/templates/detail.html
@@ -8,11 +8,33 @@
 
 내용 : {{my_jss.content}}
 
-<br> 
+<br>
 
 생성시간 : {{my_jss.updated_at|date:"Y-m-d"}}
 
 <br>
 
-<a href="{% url 'update' my_jss.id %}">"<button>수정</button></a>
-<a href="{% url 'delete' my_jss.id %}"><button>삭제</button></a>
+{% if user == my_jss.author %}
+    <a href="{% url 'update' my_jss.id %}"><button>수정</button></a>
+    <a href="{% url 'delete' my_jss.id %}"><button>삭제</button></a>
+{% endif %}
+
+{% if user.is_authenticated %}
+    <form method="POST" action="{% url 'create_comment' my_jss.id %}">
+    {% csrf_token %}
+    {{commet_form}}
+    <input type="submit" value="확인">
+    </form>
+{% endif %}
+
+{% for comment in my_jss.comment_set.all %}
+<p>
+    {{comment.author}} 🔊 {{comment.content}}
+    {% if user == comment.author %}
+        <a href="{% url 'delete_comment' my_jss.id comment.id %}">
+            <button>삭제</button>
+        </a>
+    {% endif %}
+</p>
+
+{% endfor %}
